Changelog for CmdArgs

    #256, add --option=false support
    Complete rewrite to introduce Explicit module
0.1.1
    Start of changelog